Fix code line wrap bugs

--- a/moffee/templates/base/css/styles.css
+++ b/moffee/templates/base/css/styles.css
@@ -302,6 +302,10 @@ blockquote {
     color: #333;
 }
 
+code {
+    white-space: pre-wrap;
+}
+
 /* Checkbox */
 
 .task-list-item {
